fix: harden entity pagination, multi-owner authz, and cursor charset
- EntityRepository.listAfter/listBefore: guard empty result pages so a held
  cursor whose remaining rows were concurrently deleted returns an empty page
  instead of throwing IndexOutOfBounds (HTTP 500).
- SubjectContext.isTeamAsset: evaluate ALL owners rather than returning inside
  the first loop iteration. A multi-owner asset [user, teamB] with a teamB
  policy no longer wrongly denies members of teamB.
- RestUtil.decodeCursor: decode Base64 cursor bytes as UTF-8 to match
  encodeCursor, fixing pagination-cursor corruption for non-ASCII entity names
  on JVMs whose default charset is not UTF-8.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>